fix spinner-container z-index

--- a/src/components/ImageWithLoadingAnimation/index.scss
+++ b/src/components/ImageWithLoadingAnimation/index.scss
@@ -16,6 +16,7 @@
 
   .spinner-container {
     @include absolute-position;
+    z-index: 999;
     background-color: #{colors.$color-secondary}aa;
 
     .spinner-container__spinner {
